[package]
name = "lock-free-order-book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
crossbeam = "0.8"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "order_book_benches"
harness = false

[[bench]]
name = "concurrent_queue_bench"
harness = false

[[bench]]
name = "concurrent_order_book_bench"
harness = false

[[bin]]
name = "order_book_rust"
path = "src/main.rs"